fix: fix button alignment

--- a/edcgeared/static/style.css
+++ b/edcgeared/static/style.css
@@ -32,6 +32,7 @@ i.fa-user-logged-in {
 
 .article-title {
   color: #444444;
+  text-decoration: none;
 }
 
 a.article-title:hover {
@@ -44,20 +45,24 @@ a.article-title:hover {
 }
 
 .article-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
+  height: 45px;
+  width: 45px;
+  margin-right: 15px;
 }
 
 .article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3;
+  text-decoration: none;
 }
 
 .article-metadata a:hover {
   color: #333;
   text-decoration: none;
+}
+
+.article-footer {
+  border-top: 1px solid #222222;
 }
 
 .article-svg {
@@ -146,4 +151,8 @@ legend.text-bold {
   font-size: 13px;
   color: #aaa;
   margin-bottom: 0;
+}
+
+.logout-btn {
+  float: right;
 }
